--- a/Wireless Mouse.html
+++ b/Wireless Mouse.html
@@ -6,6 +6,21 @@
 -->
 <html>
 	<head>
+		
+
+
+		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-PE6YG4KCN5"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		
+		  gtag('config', 'G-PE6YG4KCN5');
+		</script>
+		
+		
 		<title>Wireless Mouse Design</title>
 		<meta charset="utf-8" />
 		<meta
