--- a/Wireless Mouse.html
+++ b/Wireless Mouse.html
@@ -374,7 +374,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</div>
 									<div class="col-4">
 										<span class="image fit"
-                                            ><img src="images/Mouse2.png" alt=""
+                                            ><img src="images/mouse2 copy.png" alt=""
 										/></span>
 									</div>
 									<div class="col-4">
