--- a/About.html
+++ b/About.html
@@ -6,6 +6,9 @@
 -->
 <html>
 	<head>
+				<!-- Diamond Favicon -->
+
+<link rel="icon" type="image/png" href="https://img.icons8.com/ios/50/ffffff/diamond--v1.png"/>
 		
 
 
