--- a/About.html
+++ b/About.html
@@ -165,6 +165,10 @@
 											><img src="images/bmes.png" alt=""
 										/></span>
                                     </div>
+									<div class="col-4">
+										<span class="image fit"
+											><img src="images/suitx3.png" alt=""
+										/></span>
                                     </div>
                                     </h3>
                                     </section>
@@ -222,7 +226,7 @@
                 </li>
                 <li class="icon fa-calendar-alt">
                     <a href="https://calendly.com/cadengineer/15min"
-                        >Upwork Calendar</a
+                        >Calendar</a
                     >
                 </li>
 
