--- a/Manual_Scooter.html
+++ b/Manual_Scooter.html
@@ -219,7 +219,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<td>100.00</td>
 			</tr>
 		</tfoot>
-	</table>
+	</table>f
 </div>
 
 <h4>Alternate</h4>
@@ -476,7 +476,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="inner">
                     <h2 class="major">Contact</h2>
                     <p>
-                        For more information and inquiries please contact us below. To schedule a 15min call use the calendar link below.
+                        For more information and inquiries please contact us below. To schedule a 15min call use the 
+			    link below.
                     </p>
                     <form method="post" action="#">
                         <div class="fields">
@@ -508,16 +509,17 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                         <li class="icon brands fa-linkedin-in">
                             <a href="http://www.linkedin.com/in/egbosimba">Linkedin</a>
                         </li>
+			     <li class="icon fa-calendar-alt">
+                            <a href="https://calendly.com/cadengineer/15min"
+                                >Calendar</a
+                            >
+                        </li>
                         <li class="icon far fa-gem">
                             <a href="https://www.upwork.com/freelancers/~017fdee99097a29acc"
                                 >Upwork Profile</a
                             >
                         </li>
-                        <li class="icon fa-calendar-alt">
-                            <a href="https://calendly.com/cadengineer/15min"
-                                >Upwork Calendar</a
-                            >
-                        </li>
+                       
         
                         <li class="icon solid fa-envelope">
                             degbosimba@gmail.com
