--- a/Wireless Mouse.html
+++ b/Wireless Mouse.html
@@ -523,16 +523,17 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                         <li class="icon brands fa-linkedin-in">
                             <a href="http://www.linkedin.com/in/egbosimba">Linkedin</a>
                         </li>
+			      <li class="icon fa-calendar-alt">
+                            <a href="https://calendly.com/cadengineer/15min"
+                                >Calendar</a
+                            >
+                        </li>
                         <li class="icon far fa-gem">
                             <a href="https://www.upwork.com/freelancers/~017fdee99097a29acc"
                                 >Upwork Profile</a
                             >
                         </li>
-                        <li class="icon fa-calendar-alt">
-                            <a href="https://calendly.com/cadengineer/15min"
-                                >Upwork Calendar</a
-                            >
-                        </li>
+                      
         
                         <li class="icon solid fa-envelope">
                             degbosimba@gmail.com
