--- a/Wireless Mouse.html
+++ b/Wireless Mouse.html
@@ -51,9 +51,10 @@
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="About.html">About</a></li>
-						<li><a href="elements.html">Company Logo</a></li>
-						<li><a href="Wireless Mouse.html">Wireless Mouse</a></li>
+						<li><a href="Surgical_Motor.html">Surgical Motor</a></li>
 						<li><a href="Manual_Scooter.html">Manual Scooter</a></li>
+						<li><a href="Wireless Mouse.html">Wireless Mouse</a></li>
+						<li><a href="elements.html">Company Logo</a></li>
 					</ul>
 					<a href="#" class="close">Close</a>
 				</div>
