--- a/index.html
+++ b/index.html
@@ -76,30 +76,49 @@
 
 			<!-- Wrapper -->
 			<section id="wrapper">
-				<!-- One -->
+					<!-- One -->
 				<section id="one" class="wrapper spotlight style1">
 					<div class="inner">
-						<a href="#" class="image"><img src="images/RZBLOGO.png" alt="" /></a>
+						<a href="#" class="image"><img src="images/Motor Housing.jpg" alt="" /></a>
 						<div class="content">
-							<h2 class="major">Company Logo</h2>
+							<h2 class="major">Surgical Motor Shaft</h2>
 							<p>
-								Razrbooks is a student textbook resale website founded by students 
-								from the University Of Arkansas. This is their requested logo design.
-								Use the button below to learn more details about this project.
+								The key elements of this surgical robot shaft design 
+								is centered around the low torque and high precision 
+								constraints of the medical application. The assembly 
+								contains one active rotating degree-of-freedom, and 
+								is used to transmit a driven rotation from a motor
+								, to a spinning shaft where a generic appliance can be coupled.
 							</p>
-							<a href="elements.html" class="special">More Details</a>
+							<a href="Surgical_Motor.html" class="special">More Details</a>
 						</div>
-					</div>
 				</section>
 
 				<!-- Two -->
 				<section id="two" class="wrapper alt spotlight style2">
 					<div class="inner">
+						<a href="#" class="image"><img src="images/wheel3.jpeg" alt="" /></a>
+						<div class="content">
+							<h2 class="major">Manual Scooter</h2>
+							<p>
+								The Dane Technologies manual scooter is designed with a sleek low profile
+								to meet the needs of the user while providing a stylish form factor in a 
+								simple mode of transportation. This is their requested manual scooter design.
+								Use the button below to learn more details about this project.
+							</p>
+							<a href="Manual_Scooter.html" class="special">More Details</a>
+						</div>
+					</div>
+				</section>
+
+				<!-- Three -->
+				<section id="three" class="wrapper spotlight style3">
+					<div class="inner">
 						<a href="#" class="image"><img src="images/Mouse1.png" alt="" /></a>
 						<div class="content">
 							<h2 class="major">Wireless Mouse</h2>
 							<p>
-								This wirless mouse design is complete, created to fit the anatomy of the palm
+								This wireless mouse design is complete, created to fit the anatomy of the palm
 								to provide the most natural user experience. The face of the mouse is sleek, 
 								seamless and designed with the intention of the interface in mind. 
 								Use the button below to learn more details about this project.
@@ -109,22 +128,23 @@
 					</div>
 				</section>
 
-				<!-- Three -->
-				<section id="three" class="wrapper spotlight style3">
-					<div class="inner">
-						<a href="#" class="image"><img src="images/wheel3.jpeg" alt="" /></a>
-						<div class="content">
-							<h2 class="major">Manual Scooter</h2>
-							<p>
-								The Dane Technologies manual scooter is designed with a sleek low profile
-								to meet the needs of the user while providing a stylish form facter in a 
-								simple mode of teransportation. This is their requested manual scooter design.
-								Use the button below to learn more details about this project.
-							</p>
-							<a href="Manual_Scooter.html" class="special">More Details</a>
-						</div>
-					</div>
-				</section>
+<!-- Four -->
+<section id="two" class="wrapper alt spotlight style2">
+	<div class="inner">
+		<a href="#" class="image"><img src="images/RZBLOGO.png" alt="" /></a>
+		<div class="content">
+			<h2 class="major">Company Logo</h2>
+			<p>
+				Razrbooks is a student textbook resale website founded by students 
+				from the University Of Arkansas. This is their requested logo design.
+				Use the button below to learn more details about this project.
+			</p>
+			<a href="elements.html" class="special">More Details</a>
+		</div>
+	</div>
+	</div>
+</section>
+
 
 				<!-- Four
 				
