--- a/Surgical_Motor.html
+++ b/Surgical_Motor.html
@@ -442,7 +442,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                                   Gearmotor directly to the shaft, we ensure that the motion of the shaft/motor system is as 
                                   accurate as possible.The motor housing is designed with a thin plastic frame used to lock each 
                                   component in position and minimize potential moments and energy loss that may arise while 
-                                  transferring the motion of the system. 
+                                  transferring the motion of the system. This design was requested by an UpWork client and 
+								  employee of <a href="https://www.suitx.com/">SuitX</a>.
                                 
 							</div>
 								
