--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 								contains one active rotating degree-of-freedom, and 
 								is used to transmit a driven rotation from a motor
 								, to a spinning shaft where a generic appliance can be coupled.
+								Use the button below to learn more details about this project.
 							</p>
 							<a href="Surgical_Motor.html" class="special">More Details</a>
 						</div>
