--- a/Manual_Scooter.html
+++ b/Manual_Scooter.html
@@ -483,6 +483,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                     <form method="post" action="#">
                         <div class="fields">
                             <div class="field">
+				  <form id="contact-form" method="post" action="Contact_Form_Request.php"></form>
+
                                 <label for="name">Name</label>
                                 <input type="text" name="name" id="name" />
                             </div>
