--- a/Surgical_Motor.html
+++ b/Surgical_Motor.html
@@ -530,7 +530,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							>
 						</li>
 						<li class="icon far fa-gem">
-							<a href="https://www.upwork.com/freelancers/~017fdee99097a29acc"
+							<a href="https://www.upwork.com/fl/designengineer"
 								>Upwork Profile</a
 							>
 						</li>
