--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 							>
 						</li>
 						<li class="icon far fa-gem">
-							<a href="https://www.upwork.com/freelancers/~017fdee99097a29acc"
+							<a href="https://www.upwork.com/fl/designengineer"
 								>Upwork Profile</a
 							>
 						</li>
