--- a/About.html
+++ b/About.html
@@ -67,7 +67,7 @@
 				<header>
 					<div class="inner">
 						<h2>About</h2>
-						<p>Product Development Engineer - Chdubem Egbosimba</p>
+						<p>Product Development Engineer - Chidubem Egbosimba</p>
 					</div>
 				</header>
 
